# Embedded-Software-Ontwikkeling

./: CMakeLists.txt
Arthur/: Arthur.sln
Arthur/1-1/: 1-1.vcxproj  main.c
Arthur/1-13/: 1-13.vcxproj  main.c
Arthur/1-14/: 1-14.vcxproj  main.c
Arthur/1-4/: 1-4.vcxproj  main.c
Arthur/1-6/: 1-6.vcxproj  main.c
Arthur/1-7/: 1-7.vcxproj  main.c
Arthur/2-4/: 2-4.vcxproj  main.c
Arthur/FunctionPointerEx/: FunctionPointerEx.vcxproj  FunctionPointerEx.vcxproj.filters  main.c
Arthur/doubleLinkedListC/: DBL_INT.c  DBL_INT.h  doubleLinkedListC.vcxproj  doubleLinkedListC.vcxproj.filters  llist.c  llist.h  main.c
Assesment opdrachten/: Assesment.sln
Assesment opdrachten/Doubly linkes list/: Doubly linkes list.vcxproj  Doubly linkes list.vcxproj.filters  list.c  list.h  llist.c  main.c
Assesment-opdrachten/: Groeidocument assesment.docx  Groeidocument assesmentARTHUR.docx
Assesment-opdrachten/Doubly linkes list/: Doubly linkes list.vcxproj.filters  llist.h  main.c
Assesment-opdrachten/Nonvolatile/nut/: Makefile  TIStreamer.map  ipac.elf  ipac.hex
Assesment-opdrachten/Nonvolatile/nut/FunctionPointerEx/: barabara.c  barbara.c  myFunctions.c  proto.h
Assesment-opdrachten/Nonvolatile/nut/include/: EEPROMHandler.h  alarm.h
Assesment-opdrachten/Nonvolatile/nut/source/: EEPROMHandler.c  EEPROMHandler.lst  alarm.c  display.lst  fat.lst  flash.lst  keyboard.c  keyboard.lst  led.lst  log.lst  main.c  main.lst  menu.lst  mmc.lst  mmcdrv.lst  remcon.c  remcon.lst  rtc.lst  spidrv.lst  uart0driver.lst  vs10xx.lst  watchdog.lst
Assesment-opdrachten/Shoutcast/nut/: Makefile  TIStreamer.map  ipac.elf  ipac.hex
Assesment-opdrachten/Shoutcast/nut/include/: StreamWork.h  display.h  menu.h
Assesment-opdrachten/Shoutcast/nut/source/: StreamWork.c  StreamWork.lst  display.lst  fat.lst  flash.lst  keyboard.lst  lcd.lst  led.lst  log.lst  main.c  main.lst  menu.c  menu.lst  mmc.lst  mmcdrv.lst  radioMenu.lst  remcon.c  remcon.lst  rtc.lst  spidrv.lst  uart0driver.lst  vs10xx.lst  watchdog.lst
C handboek/Hoofdstuk 1/Hoofdstuk 1/: Hoofdstuk 1.sln
C handboek/Hoofdstuk 1/Hoofdstuk 1/Opgave 1/: Hello.c  Opgave 1.vcxproj  Opgave 1.vcxproj.filters
C handboek/Hoofdstuk 1/Hoofdstuk 1/Opgave 9/: Opgave 9.vcxproj  Opgave 9.vcxproj.filters  correctSpacing.c
C handboek/Hoofdstuk 1/Hoofdstuk 1/opgave 2/: Escape sequences.c  opgave 2.vcxproj  opgave 2.vcxproj.filters
C handboek/Hoofdstuk 1/Hoofdstuk 1/opgave 3/: Fahrenheit-Celsius.c  opgave 3.vcxproj  opgave 3.vcxproj.filters
Week 1/: Week 1.sln
Week 1/1/: 1.cpp  1.vcxproj
Week 1/2/: 2.cpp  2.vcxproj
Week 1/3/: 3.cpp  3.vcxproj
Week 1/4/: 4.vcxproj  Celsius-Fahrenheit.c
Week 1/5/: 5.c  5.vcxproj  5.vcxproj.filters
Week 1/5-3/: 5-3.cpp  5-3.vcxproj  string2.h
Week 1/5-4/: 5-4.vcxproj  main.c
Week 1/6/: 6.c  6.vcxproj  6.vcxproj.filters
Week 1/7/: 7.vcxproj  7.vcxproj.filters  PrintEOF.c
Week 1/8/: 8.cpp  8.vcxproj  8.vcxproj.filters  tel teken.c
Week 1/Opgave 10/: Opgave 10.vcxproj  Opgave 10.vcxproj.filters  expressie.c
Week 1/Opgave 11/: Opgave 11.vcxproj
Week 1/Opgave 15/: Opgave 15.vcxproj  Opgave 15.vcxproj.filters  temperature functions.c
Week 1/Opgave 9/: Opgave 9.vcxproj  Opgave 9.vcxproj.filters  remove double spaces.c
Week 2/double linked list/: double linked list.sln
Week 2/double linked list/double linked list/: double linked list.vcxproj  double linked list.vcxproj.filters
Week 2/double linked list/example/: example.vcxproj  main.c
