cmake_minimum_required(VERSION 3.3)
project(Embedded_Software_Ontwikkeling)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    "Week 1/1/Debug/1.tlog/1.lastbuildstate"
    "Week 1/1/Debug/1.tlog/CL.command.1.tlog"
    "Week 1/1/Debug/1.tlog/CL.read.1.tlog"
    "Week 1/1/Debug/1.tlog/CL.write.1.tlog"
    "Week 1/1/Debug/1.tlog/link.command.1.tlog"
    "Week 1/1/Debug/1.tlog/link.read.1.tlog"
    "Week 1/1/Debug/1.tlog/link.write.1.tlog"
    "Week 1/1/Debug/1.log"
    "Week 1/1/Debug/1.obj"
    "Week 1/1/Debug/vc140.idb"
    "Week 1/1/Debug/vc140.pdb"
    "Week 1/1/1.cpp"
    "Week 1/1/1.vcxproj"
    "Week 1/1/1.vcxproj.filters"
    "Week 1/2/Debug/2.tlog/2.lastbuildstate"
    "Week 1/2/Debug/2.tlog/CL.command.1.tlog"
    "Week 1/2/Debug/2.tlog/CL.read.1.tlog"
    "Week 1/2/Debug/2.tlog/CL.write.1.tlog"
    "Week 1/2/Debug/2.tlog/link.command.1.tlog"
    "Week 1/2/Debug/2.tlog/link.read.1.tlog"
    "Week 1/2/Debug/2.tlog/link.write.1.tlog"
    "Week 1/2/Debug/2.log"
    "Week 1/2/Debug/2.obj"
    "Week 1/2/Debug/vc140.idb"
    "Week 1/2/Debug/vc140.pdb"
    "Week 1/2/2.cpp"
    "Week 1/2/2.vcxproj"
    "Week 1/2/2.vcxproj.filters"
    "Week 1/3/Debug/3.tlog/3.lastbuildstate"
    "Week 1/3/Debug/3.tlog/CL.command.1.tlog"
    "Week 1/3/Debug/3.tlog/CL.read.1.tlog"
    "Week 1/3/Debug/3.tlog/CL.write.1.tlog"
    "Week 1/3/Debug/3.tlog/link.command.1.tlog"
    "Week 1/3/Debug/3.tlog/link.read.1.tlog"
    "Week 1/3/Debug/3.tlog/link.write.1.tlog"
    "Week 1/3/Debug/3.log"
    "Week 1/3/Debug/3.obj"
    "Week 1/3/Debug/vc140.idb"
    "Week 1/3/Debug/vc140.pdb"
    "Week 1/3/3.cpp"
    "Week 1/3/3.vcxproj"
    "Week 1/3/3.vcxproj.filters"
    "Week 1/4/Debug/4.tlog/4.lastbuildstate"
    "Week 1/4/Debug/4.tlog/CL.command.1.tlog"
    "Week 1/4/Debug/4.tlog/CL.read.1.tlog"
    "Week 1/4/Debug/4.tlog/CL.write.1.tlog"
    "Week 1/4/Debug/4.tlog/link.command.1.tlog"
    "Week 1/4/Debug/4.tlog/link.read.1.tlog"
    "Week 1/4/Debug/4.tlog/link.write.1.tlog"
    "Week 1/4/Debug/4.log"
    "Week 1/4/Debug/4.obj"
    "Week 1/4/Debug/vc140.idb"
    "Week 1/4/Debug/vc140.pdb"
    "Week 1/4/4.cpp"
    "Week 1/4/4.vcxproj"
    "Week 1/4/4.vcxproj.filters"
    "Week 1/5/Debug/5.tlog/5.lastbuildstate"
    "Week 1/5/Debug/5.tlog/CL.command.1.tlog"
    "Week 1/5/Debug/5.tlog/CL.read.1.tlog"
    "Week 1/5/Debug/5.tlog/CL.write.1.tlog"
    "Week 1/5/Debug/5.tlog/link.command.1.tlog"
    "Week 1/5/Debug/5.tlog/link.read.1.tlog"
    "Week 1/5/Debug/5.tlog/link.write.1.tlog"
    "Week 1/5/Debug/5.log"
    "Week 1/5/Debug/5.obj"
    "Week 1/5/Debug/vc140.idb"
    "Week 1/5/Debug/vc140.pdb"
    "Week 1/5/5.cpp"
    "Week 1/5/5.vcxproj"
    "Week 1/5/5.vcxproj.filters"
    "Week 1/5-3/Debug/5-3.tlog/5-3.lastbuildstate"
    "Week 1/5-3/Debug/5-3.tlog/CL.command.1.tlog"
    "Week 1/5-3/Debug/5-3.tlog/CL.read.1.tlog"
    "Week 1/5-3/Debug/5-3.tlog/CL.write.1.tlog"
    "Week 1/5-3/Debug/5-3.tlog/link.command.1.tlog"
    "Week 1/5-3/Debug/5-3.tlog/link.read.1.tlog"
    "Week 1/5-3/Debug/5-3.tlog/link.write.1.tlog"
    "Week 1/5-3/Debug/5-3.log"
    "Week 1/5-3/Debug/5-3.obj"
    "Week 1/5-3/Debug/vc140.idb"
    "Week 1/5-3/Debug/vc140.pdb"
    "Week 1/5-3/5-3.cpp"
    "Week 1/5-3/5-3.vcxproj"
    "Week 1/5-3/5-3.vcxproj.filters"
    "Week 1/5-3/5-3.vcxproj.user"
    "Week 1/5-3/string2.h"
    "Week 1/6/Debug/6.tlog/6.lastbuildstate"
    "Week 1/6/Debug/6.tlog/CL.command.1.tlog"
    "Week 1/6/Debug/6.tlog/CL.read.1.tlog"
    "Week 1/6/Debug/6.tlog/CL.write.1.tlog"
    "Week 1/6/Debug/6.tlog/link.command.1.tlog"
    "Week 1/6/Debug/6.tlog/link.read.1.tlog"
    "Week 1/6/Debug/6.tlog/link.write.1.tlog"
    "Week 1/6/Debug/6.log"
    "Week 1/6/Debug/6.obj"
    "Week 1/6/Debug/vc140.idb"
    "Week 1/6/Debug/vc140.pdb"
    "Week 1/6/6.cpp"
    "Week 1/6/6.vcxproj"
    "Week 1/6/6.vcxproj.filters"
    "Week 1/Debug/1.exe"
    "Week 1/Debug/1.ilk"
    "Week 1/Debug/1.pdb"
    "Week 1/Debug/2.exe"
    "Week 1/Debug/2.ilk"
    "Week 1/Debug/2.pdb"
    "Week 1/Debug/3.exe"
    "Week 1/Debug/3.ilk"
    "Week 1/Debug/3.pdb"
    "Week 1/Debug/4.exe"
    "Week 1/Debug/4.ilk"
    "Week 1/Debug/4.pdb"
    "Week 1/Debug/5-3.exe"
    "Week 1/Debug/5-3.ilk"
    "Week 1/Debug/5-3.pdb"
    "Week 1/Debug/5.exe"
    "Week 1/Debug/5.ilk"
    "Week 1/Debug/5.pdb"
    "Week 1/Debug/6.exe"
    "Week 1/Debug/6.ilk"
    "Week 1/Debug/6.pdb"
    "Week 1/Week 1.sdf"
    "Week 1/Week 1.sln"
    .gitattributes
    .gitignore)

add_executable(Embedded_Software_Ontwikkeling ${SOURCE_FILES})